SUBDIRS = utils source progs basev
EXTRA_DIST = \
	autogen.sh \
	fixunix.sh \
	docs/changes.log \
	docs/changes1.log \
	docs/changes2.log \
	docs/changes3.log \
	docs/gnu.txt \
	docs/vavoom.txt \
	docs/vcc.log \
	msvc/Vavoom.dsw \
	msvc/ddf2vc/ddf2vc.dsp \
	msvc/libglbsp/libglbsp.dsp \
	msvc/libglvis/libglvis.dsp \
	msvc/Progs/Progs.dsp \
	msvc/timidity/timidity.dsp \
	msvc/Vavoom95/Vavoom95.dsp \
	msvc/vcc/vcc.dsp \
	msvc/vcpp/vcpp.dsp \
	msvc/vlumpy/vlumpy.dsp
