SUBDIRS = utils source progs basev $(EXTRA_SUBDIRS)
EXTRA_DIST = \
	autogen.sh \
	fixunix.sh \
	docs/changes.log \
	docs/changes1.log \
	docs/changes2.log \
	docs/changes3.log \
	docs/gnu.txt \
	docs/vavoom.txt \
	docs/vcc.log \
	msvc/Vavoom.sln \
	msvc/acc.vcproj \
	msvc/libglbsp.vcproj \
	msvc/libglvis.vcproj \
	msvc/progs_common.vcproj \
	msvc/progs_doom.vcproj \
	msvc/progs_doom2.vcproj \
	msvc/progs_heretic.vcproj \
	msvc/progs_hexen.vcproj \
	msvc/progs_strife.vcproj \
	msvc/timidity.vcproj \
	msvc/vavoom.vcproj \
	msvc/vcc.vcproj \
	msvc/vlumpy.vcproj
