basevdir = $(datadir)/vavoom/basev
nobase_basev_DATA = \
	common/basepak.pk3 \
	doom/basepak.pk3 \
	doom1/basepak.pk3 \
	doom2/basepak.pk3 \
	heretic/basepak.pk3 \
	hexen/basepak.pk3 \
	plutonia/basepak.pk3 \
	strife/basepak.pk3 \
	tnt/basepak.pk3
nobase_dist_basev_DATA = \
	games.txt \
	doom1/base.txt \
	doom2/base.txt \
	plutonia/base.txt \
	tnt/base.txt

EXTRA_DIST = \
	common/basepak.ls.in \
	common/default.cfg \
	common/x11r6rgb.txt \
	common/startup.vs \
	common/terrain.txt \
	common/textures/-noflat-.png \
	doom/graphics/autopage.lmp \
	doom/graphics/fontb01.lmp \
	doom/graphics/fontb02.lmp \
	doom/graphics/fontb03.lmp \
	doom/graphics/fontb04.lmp \
	doom/graphics/fontb05.lmp \
	doom/graphics/fontb06.lmp \
	doom/graphics/fontb07.lmp \
	doom/graphics/fontb08.lmp \
	doom/graphics/fontb09.lmp \
	doom/graphics/fontb10.lmp \
	doom/graphics/fontb11.lmp \
	doom/graphics/fontb12.lmp \
	doom/graphics/fontb13.lmp \
	doom/graphics/fontb14.lmp \
	doom/graphics/fontb15.lmp \
	doom/graphics/fontb16.lmp \
	doom/graphics/fontb17.lmp \
	doom/graphics/fontb18.lmp \
	doom/graphics/fontb19.lmp \
	doom/graphics/fontb20.lmp \
	doom/graphics/fontb21.lmp \
	doom/graphics/fontb22.lmp \
	doom/graphics/fontb23.lmp \
	doom/graphics/fontb24.lmp \
	doom/graphics/fontb25.lmp \
	doom/graphics/fontb26.lmp \
	doom/graphics/fontb27.lmp \
	doom/graphics/fontb28.lmp \
	doom/graphics/fontb29.lmp \
	doom/graphics/fontb30.lmp \
	doom/graphics/fontb31.lmp \
	doom/graphics/fontb32.lmp \
	doom/graphics/fontb33.lmp \
	doom/graphics/fontb34.lmp \
	doom/graphics/fontb35.lmp \
	doom/graphics/fontb36.lmp \
	doom/graphics/fontb37.lmp \
	doom/graphics/fontb38.lmp \
	doom/graphics/fontb39.lmp \
	doom/graphics/fontb40.lmp \
	doom/graphics/fontb41.lmp \
	doom/graphics/fontb42.lmp \
	doom/graphics/fontb43.lmp \
	doom/graphics/fontb44.lmp \
	doom/graphics/fontb45.lmp \
	doom/graphics/fontb46.lmp \
	doom/graphics/fontb47.lmp \
	doom/graphics/fontb48.lmp \
	doom/graphics/fontb49.lmp \
	doom/graphics/fontb50.lmp \
	doom/graphics/fontb51.lmp \
	doom/graphics/fontb52.lmp \
	doom/graphics/fontb53.lmp \
	doom/graphics/fontb54.lmp \
	doom/graphics/fontb55.lmp \
	doom/graphics/fontb56.lmp \
	doom/graphics/fontb57.lmp \
	doom/graphics/fontb58.lmp \
	doom/graphics/fontb59.lmp \
	doom/graphics/fontb60.lmp \
	doom/graphics/fontb61.lmp \
	doom/graphics/fontb62.lmp \
	doom/graphics/fontb63.lmp \
	doom/graphics/fontb64.lmp \
	doom/graphics/fontb65.lmp \
	doom/graphics/fontb66.lmp \
	doom/graphics/fontb67.lmp \
	doom/graphics/fontb68.lmp \
	doom/graphics/fontb69.lmp \
	doom/graphics/fontb70.lmp \
	doom/graphics/fontb71.lmp \
	doom/graphics/fontb72.lmp \
	doom/graphics/fontb73.lmp \
	doom/graphics/fontb74.lmp \
	doom/graphics/fontb75.lmp \
	doom/graphics/fontb76.lmp \
	doom/graphics/fontb77.lmp \
	doom/graphics/fontb78.lmp \
	doom/graphics/fontb79.lmp \
	doom/graphics/fontb80.lmp \
	doom/graphics/fontb81.lmp \
	doom/graphics/fontb82.lmp \
	doom/graphics/fontb83.lmp \
	doom/graphics/fontb84.lmp \
	doom/graphics/fontb85.lmp \
	doom/graphics/fontb86.lmp \
	doom/graphics/fontb87.lmp \
	doom/graphics/fontb88.lmp \
	doom/graphics/fontb89.lmp \
	doom/graphics/fontb90.lmp \
	doom/graphics/fontb91.lmp \
	doom/graphics/fontb92.lmp \
	doom/graphics/fontb93.lmp \
	doom/graphics/fontb94.lmp \
	doom/graphics/fontb95.lmp \
	doom/graphics/croshai1.lmp \
	doom/graphics/croshai2.lmp \
	doom/graphics/croshai3.lmp \
	doom/palette.pcx \
	doom/basepak.ls.in \
	doom/language.en \
	doom/animated.lmp \
	doom/animdefs.txt \
	doom/dehinfo.txt \
	doom/skyboxes.txt \
	doom/sndinfo.txt \
	doom/sndseq.txt \
	doom1/basepak.ls.in \
	doom1/mapinfo.txt \
	doom1/sndinfo.txt \
	doom2/basepak.ls.in \
	doom2/mapinfo.txt \
	heretic/graphics/croshai1.lmp \
	heretic/graphics/croshai2.lmp \
	heretic/graphics/croshai3.lmp \
	heretic/graphics/fonta30.lmp \
	heretic/graphics/fonta63.lmp \
	heretic/palette.pcx \
	heretic/basepak.ls.in \
	heretic/language.en \
	heretic/animdefs.txt \
	heretic/mapinfo.txt \
	heretic/skyboxes.txt \
	heretic/sndinfo.txt \
	heretic/sndseq.txt \
	heretic/terrain.txt \
	hexen/graphics/croshai1.lmp \
	hexen/graphics/croshai2.lmp \
	hexen/graphics/croshai3.lmp \
	hexen/graphics/fonta30.lmp \
	hexen/graphics/fonta63.lmp \
	hexen/palette.pcx \
	hexen/basepak.ls.in \
	hexen/language.en \
	hexen/animdefs.txt \
	hexen/mapinfo.txt \
	hexen/skyboxes.txt \
	hexen/sndinfo.txt \
	hexen/terrain.txt \
	plutonia/basepak.ls.in \
	plutonia/mapinfo.txt \
	strife/palette.pcx \
	strife/graphics/autopage.lmp \
	strife/graphics/croshai1.lmp \
	strife/graphics/croshai2.lmp \
	strife/graphics/croshai3.lmp \
	strife/graphics/fontb01.lmp \
	strife/graphics/fontb02.lmp \
	strife/graphics/fontb03.lmp \
	strife/graphics/fontb04.lmp \
	strife/graphics/fontb05.lmp \
	strife/graphics/fontb06.lmp \
	strife/graphics/fontb07.lmp \
	strife/graphics/fontb08.lmp \
	strife/graphics/fontb09.lmp \
	strife/graphics/fontb10.lmp \
	strife/graphics/fontb11.lmp \
	strife/graphics/fontb12.lmp \
	strife/graphics/fontb13.lmp \
	strife/graphics/fontb14.lmp \
	strife/graphics/fontb15.lmp \
	strife/graphics/fontb16.lmp \
	strife/graphics/fontb17.lmp \
	strife/graphics/fontb18.lmp \
	strife/graphics/fontb19.lmp \
	strife/graphics/fontb20.lmp \
	strife/graphics/fontb21.lmp \
	strife/graphics/fontb22.lmp \
	strife/graphics/fontb23.lmp \
	strife/graphics/fontb24.lmp \
	strife/graphics/fontb25.lmp \
	strife/graphics/fontb26.lmp \
	strife/graphics/fontb27.lmp \
	strife/graphics/fontb28.lmp \
	strife/graphics/fontb29.lmp \
	strife/graphics/fontb30.lmp \
	strife/graphics/fontb31.lmp \
	strife/graphics/fontb32.lmp \
	strife/graphics/fontb33.lmp \
	strife/graphics/fontb34.lmp \
	strife/graphics/fontb35.lmp \
	strife/graphics/fontb36.lmp \
	strife/graphics/fontb37.lmp \
	strife/graphics/fontb38.lmp \
	strife/graphics/fontb39.lmp \
	strife/graphics/fontb40.lmp \
	strife/graphics/fontb41.lmp \
	strife/graphics/fontb42.lmp \
	strife/graphics/fontb43.lmp \
	strife/graphics/fontb44.lmp \
	strife/graphics/fontb45.lmp \
	strife/graphics/fontb46.lmp \
	strife/graphics/fontb47.lmp \
	strife/graphics/fontb48.lmp \
	strife/graphics/fontb49.lmp \
	strife/graphics/fontb50.lmp \
	strife/graphics/fontb51.lmp \
	strife/graphics/fontb52.lmp \
	strife/graphics/fontb53.lmp \
	strife/graphics/fontb54.lmp \
	strife/graphics/fontb55.lmp \
	strife/graphics/fontb56.lmp \
	strife/graphics/fontb57.lmp \
	strife/graphics/fontb58.lmp \
	strife/basepak.ls.in \
	strife/language.en \
	strife/animdefs.txt \
	strife/mapinfo.txt \
	strife/skyboxes.txt \
	strife/sndinfo.txt \
	strife/sndseq.txt \
	strife/terrain.txt \
	tnt/basepak.ls.in \
	tnt/mapinfo.txt

VLUMPY = ../utils/bin/vlumpy$(EXEEXT)
ACC = ../utils/bin/acc$(EXEEXT)

common/basepak.pk3: common/basepak.ls $(VLUMPY) \
		common/progs/engine.dat common/progs/linespec.dat
	$(VLUMPY) $<

doom/basepak.pk3: doom/basepak.ls doom/language.en $(VLUMPY)
	@mkdir -p doom
	$(VLUMPY) $<

doom1/basepak.pk3: doom1/basepak.ls $(VLUMPY) \
		doom1/progs/shared.dat doom1/progs/clprogs.dat doom1/progs/svprogs.dat
	$(VLUMPY) $<

doom2/basepak.pk3: doom2/basepak.ls $(VLUMPY) \
		doom2/progs/shared.dat doom2/progs/clprogs.dat doom2/progs/svprogs.dat
	$(VLUMPY) $<

heretic/basepak.pk3: heretic/basepak.ls $(VLUMPY) \
		heretic/progs/shared.dat heretic/progs/clprogs.dat heretic/progs/svprogs.dat
	$(VLUMPY) $<

hexen/basepak.pk3: hexen/basepak.ls $(VLUMPY) \
		hexen/progs/shared.dat hexen/progs/clprogs.dat hexen/progs/svprogs.dat
	$(VLUMPY) $<

plutonia/basepak.pk3: plutonia/basepak.ls $(VLUMPY)
	@mkdir -p plutonia
	$(VLUMPY) $<

strife/basepak.pk3: strife/basepak.ls $(VLUMPY) \
		strife/progs/shared.dat strife/progs/clprogs.dat strife/progs/svprogs.dat strife/strfhelp.o
	$(VLUMPY) $<

strife/strfhelp.o: $(srcdir)/../utils/editing/acs/*.acs $(ACC)
	$(ACC) $(srcdir)/../utils/editing/acs/strfhelp.acs strife/strfhelp.o

tnt/basepak.pk3: tnt/basepak.ls $(VLUMPY)
	@mkdir -p tnt
	$(VLUMPY) $<
