SUBDIRS = common doom doom2 heretic hexen strife
EXTRA_DIST = \
	ddf/Makefile \
	ddf/clprogs.vc \
	ddf/svprogs.vc \
	ddf/compile.bat \
	hack_d1/Makefile \
	hack_d1/clprogs.vc \
	hack_d1/compile.bat \
	hack_d1/hack.bat \
	hack_d1/hack.deh \
	hack_d1/hack.ls \
	hack_d1/makewad.bat \
	hack_d1/svprogs.vc \
	hack_d2/Makefile \
	hack_d2/clprogs.vc \
	hack_d2/compile.bat \
	hack_d2/hack.bat \
	hack_d2/hack.deh \
	hack_d2/hack.ls \
	hack_d2/makewad.bat \
	hack_d2/svprogs.vc \
	template.vc
